--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,13 @@ serde = "1.0.204"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 tokio-postgres = { version = "0.7.10", features = ["array-impls"] }
 chrono = "0.4.38"
-sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
+sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "ipnetwork", "time", "chrono"] }
 indexmap = "2.2.6"
 log = "0.4.22"
 serde_json = "1.0.120"
 async-trait = "0.1.81"
 memory-stats = "1.2.0"
+reqwest = { version = "0.12.5", features = ["json"] }
+flamegraph = "0.6.5"
+cargo-heaptrack = "0.1.0"
+time = "0.3.36"
