Add data for testing types

--- a/lab/pyproject.toml
+++ b/lab/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 polars = "^1.2.1"
 pymongo = "^4.8.0"
+requests = "^2.32.3"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
