--- a/lab/pyproject.toml
+++ b/lab/pyproject.toml
@@ -11,6 +11,7 @@ polars = "^1.2.1"
 pymongo = "^4.8.0"
 requests = "^2.32.3"
 psycopg2 = "^2.9.9"
+mysql-connector-python = "^9.0.0"
 
 
 [build-system]
